--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,9 +47,10 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
+     <Compile Include="Assets\Pacer.cs" />
+     <Compile Include="Assets\Scripts\BallController.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\Scripts\CameraController.cs" />
-     <Compile Include="Assets\Pacer.cs" />
      <Compile Include="Assets\Scripts\Rotator.cs" />
  <Reference Include="UnityEngine">
  <HintPath>/Applications/Unity/Hub/Editor/2020.2.2f1/Unity.app/Contents/Managed/UnityEngine/UnityEngine.dll</HintPath>
@@ -624,20 +625,26 @@
  <Reference Include="Unity.VSCode.Editor">
  <HintPath>/Users/jimmyerickson/Unity Stuff/ball-roll-module1-erickson/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
  </Reference>
+ <Reference Include="Unity.XR.OpenVR">
+ <HintPath>/Users/jimmyerickson/Unity Stuff/ball-roll-module1-erickson/Library/ScriptAssemblies/Unity.XR.OpenVR.dll</HintPath>
+ </Reference>
  <Reference Include="Unity.TextMeshPro.Editor">
  <HintPath>/Users/jimmyerickson/Unity Stuff/ball-roll-module1-erickson/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.VisualStudio.Editor">
  <HintPath>/Users/jimmyerickson/Unity Stuff/ball-roll-module1-erickson/Library/ScriptAssemblies/Unity.VisualStudio.Editor.dll</HintPath>
  </Reference>
- <Reference Include="Unity.Timeline.Editor">
- <HintPath>/Users/jimmyerickson/Unity Stuff/ball-roll-module1-erickson/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+ <Reference Include="Unity.XR.Management.Editor">
+ <HintPath>/Users/jimmyerickson/Unity Stuff/ball-roll-module1-erickson/Library/ScriptAssemblies/Unity.XR.Management.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Timeline">
  <HintPath>/Users/jimmyerickson/Unity Stuff/ball-roll-module1-erickson/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
  </Reference>
  <Reference Include="Unity.TextMeshPro">
  <HintPath>/Users/jimmyerickson/Unity Stuff/ball-roll-module1-erickson/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+ </Reference>
+ <Reference Include="Unity.Subsystem.Registration">
+ <HintPath>/Users/jimmyerickson/Unity Stuff/ball-roll-module1-erickson/Library/ScriptAssemblies/Unity.Subsystem.Registration.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.UI">
  <HintPath>/Users/jimmyerickson/Unity Stuff/ball-roll-module1-erickson/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
@@ -648,20 +655,8 @@
  <Reference Include="UnityEngine.UI">
  <HintPath>/Users/jimmyerickson/Unity Stuff/ball-roll-module1-erickson/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
  </Reference>
- <Reference Include="Unity.XR.OpenVR">
- <HintPath>/Users/jimmyerickson/Unity Stuff/ball-roll-module1-erickson/Library/ScriptAssemblies/Unity.XR.OpenVR.dll</HintPath>
- </Reference>
  <Reference Include="UnityEngine.SpatialTracking">
  <HintPath>/Users/jimmyerickson/Unity Stuff/ball-roll-module1-erickson/Library/ScriptAssemblies/UnityEngine.SpatialTracking.dll</HintPath>
- </Reference>
- <Reference Include="Unity.XR.Management">
- <HintPath>/Users/jimmyerickson/Unity Stuff/ball-roll-module1-erickson/Library/ScriptAssemblies/Unity.XR.Management.dll</HintPath>
- </Reference>
- <Reference Include="Unity.XR.Management.Editor">
- <HintPath>/Users/jimmyerickson/Unity Stuff/ball-roll-module1-erickson/Library/ScriptAssemblies/Unity.XR.Management.Editor.dll</HintPath>
- </Reference>
- <Reference Include="Unity.Subsystem.Registration">
- <HintPath>/Users/jimmyerickson/Unity Stuff/ball-roll-module1-erickson/Library/ScriptAssemblies/Unity.Subsystem.Registration.dll</HintPath>
  </Reference>
  <Reference Include="Unity.XR.OpenVR.Editor">
  <HintPath>/Users/jimmyerickson/Unity Stuff/ball-roll-module1-erickson/Library/ScriptAssemblies/Unity.XR.OpenVR.Editor.dll</HintPath>
@@ -669,8 +664,20 @@
  <Reference Include="UnityEngine.XR.LegacyInputHelpers">
  <HintPath>/Users/jimmyerickson/Unity Stuff/ball-roll-module1-erickson/Library/ScriptAssemblies/UnityEngine.XR.LegacyInputHelpers.dll</HintPath>
  </Reference>
+ <Reference Include="Unity.Timeline.Editor">
+ <HintPath>/Users/jimmyerickson/Unity Stuff/ball-roll-module1-erickson/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+ </Reference>
  <Reference Include="UnityEditor.XR.LegacyInputHelpers">
  <HintPath>/Users/jimmyerickson/Unity Stuff/ball-roll-module1-erickson/Library/ScriptAssemblies/UnityEditor.XR.LegacyInputHelpers.dll</HintPath>
+ </Reference>
+ <Reference Include="Unity.XR.Management">
+ <HintPath>/Users/jimmyerickson/Unity Stuff/ball-roll-module1-erickson/Library/ScriptAssemblies/Unity.XR.Management.dll</HintPath>
+ </Reference>
+ <Reference Include="Unity.XR.Oculus.Editor">
+ <HintPath>/Users/jimmyerickson/Unity Stuff/ball-roll-module1-erickson/Library/ScriptAssemblies/Unity.XR.Oculus.Editor.dll</HintPath>
+ </Reference>
+ <Reference Include="Unity.XR.Oculus">
+ <HintPath>/Users/jimmyerickson/Unity Stuff/ball-roll-module1-erickson/Library/ScriptAssemblies/Unity.XR.Oculus.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.SpatialTracking">
  <HintPath>/Users/jimmyerickson/Unity Stuff/ball-roll-module1-erickson/Library/ScriptAssemblies/UnityEditor.SpatialTracking.dll</HintPath>
@@ -682,11 +689,6 @@
       <Name>SteamVR_Input_Editor</Name>
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
-    <ProjectReference Include="SteamVR_Editor.csproj">
-      <Project>{C95EDEFD-8A89-EDB4-27EF-91FEE8B702C5}</Project>
-      <Name>SteamVR_Editor</Name>
-      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
-    </ProjectReference>
     <ProjectReference Include="SteamVR.csproj">
       <Project>{7384F36C-F7D1-4D3C-0585-0208903EE66F}</Project>
       <Name>SteamVR</Name>
@@ -695,6 +697,16 @@
     <ProjectReference Include="SteamVR_Windows_EditorHelper.csproj">
       <Project>{127D5EC7-79BE-2660-B942-4AE4D21D1FD0}</Project>
       <Name>SteamVR_Windows_EditorHelper</Name>
+      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+    </ProjectReference>
+    <ProjectReference Include="SteamVR_Actions.csproj">
+      <Project>{EA98B669-7243-1A3D-3A14-2A964B3DF8F3}</Project>
+      <Name>SteamVR_Actions</Name>
+      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+    </ProjectReference>
+    <ProjectReference Include="SteamVR_Editor.csproj">
+      <Project>{C95EDEFD-8A89-EDB4-27EF-91FEE8B702C5}</Project>
+      <Name>SteamVR_Editor</Name>
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
   </ItemGroup>
